# sensors-monitor

./: .gitignore  Cargo.toml  PKGBUILD  README.md  it8686.conf  main.py  pyproject.toml  sensors-monitor-odroid.conf  sensors-monitor.install  setup.cfg
.zed/: debug.json  tasks.json
it87-dkms-git/: PKGBUILD.patch  odroid.patch
pylmsensonrs/: __main__.py  sensors-monitor-odroid.conf  sm.py
sensors.d/: it8613.conf  odroid-h3plus.conf
src/: cli.rs  config.rs  main.rs  sensors-monitor.py  sensors.rs  ui.rs
testing/: sensors-1.json  sensors-monitor-odroid-test.conf  sensors.json
