[package]
name = "sensors-monitor"
version = "1.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
ratatui = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
color-eyre = "0.6"
crossterm = "0.29"
time-format = "1.2.1"
humantime = "2.3.0"
