[metadata]
name = sensors-monitor
version = 1.0.2
description = A terminal-based system sensor monitor with color-coded output
url = https://github.com/bobi/sensors-monitor
[options]
packages = pylmsensonrs
python_requires = >=3.9
install_requires = rich~=13.9.4

[options.entry_points]
console_scripts = sensors-monitor = pylmsensonrs.__main__:main
